# vibe-rust

./: .env.example  Cargo.toml  Makefile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  BACKGROUND.md  DEPENDENCY.md  MIGRATION.md  MODULE.md
migrations/: 20251002034419_create_notes_table.up.sql  20251002080733_fix_timestamp_types.down.sql  20251002080733_fix_timestamp_types.up.sql
src/: main.rs
src/infrastructure/: database.rs
src/models/: model.rs
src/modules/: mod.rs
src/modules/commons/: handler.rs  mod.rs  routes.rs
src/modules/notes/: handler.rs  mod.rs  repository.rs  routes.rs  service.rs
